@@ -5,6 +5,9 @@
 
 package io.opentelemetry.instrumentation.docs.utils;
 
+import static java.util.Collections.emptyList;
+import static java.util.stream.Collectors.toList;
+
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
@@ -19,7 +22,6 @@ import io.opentelemetry.instrumentation.docs.internal.InstrumentationModule;
 import io.opentelemetry.instrumentation.docs.internal.TelemetryAttribute;
 import java.io.BufferedWriter;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -27,7 +29,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.TreeSet;
-import java.util.stream.Collectors;
 import org.yaml.snakeyaml.DumperOptions;
 import org.yaml.snakeyaml.Yaml;
 
@@ -46,27 +47,20 @@ public class YamlHelper {
 
     Yaml yaml = new Yaml(options);
 
-    // Add library modules
     Map<String, Object> libraries = getLibraryInstrumentations(list);
     if (!libraries.isEmpty()) {
-      yaml.dump(getLibraryInstrumentations(list), writer);
-    }
-
-    // Add internal modules
-    Map<String, Object> internal = generateBaseYaml(list, InstrumentationClassification.INTERNAL);
-    if (!internal.isEmpty()) {
-      yaml.dump(internal, writer);
+      yaml.dump(libraries, writer);
     }
 
     // add custom instrumentation modules
-    Map<String, Object> custom = generateBaseYaml(list, InstrumentationClassification.CUSTOM);
+    Map<String, Object> custom = getCustomInstrumentations(list);
     if (!custom.isEmpty()) {
       yaml.dump(custom, writer);
     }
   }
 
   private static Map<String, Object> getLibraryInstrumentations(List<InstrumentationModule> list) {
-    Map<String, List<InstrumentationModule>> libraryInstrumentations =
+    List<InstrumentationModule> libraryInstrumentations =
         list.stream()
             .filter(
                 module ->
@@ -74,40 +68,32 @@ public class YamlHelper {
                         .getMetadata()
                         .getClassification()
                         .equals(InstrumentationClassification.LIBRARY))
-            .collect(
-                Collectors.groupingBy(
-                    InstrumentationModule::getGroup,
-                    TreeMap::new,
-                    Collectors.collectingAndThen(
-                        Collectors.toList(),
-                        modules ->
-                            modules.stream()
-                                .sorted(InstrumentationNameComparator.BY_NAME_AND_VERSION)
-                                .collect(Collectors.toList()))));
+            .sorted(InstrumentationNameComparator.BY_NAME_AND_VERSION)
+            .toList();
+
+    if (libraryInstrumentations.isEmpty()) {
+      return new TreeMap<>();
+    }
+
+    List<Map<String, Object>> instrumentations = new ArrayList<>();
+    for (InstrumentationModule module : libraryInstrumentations) {
+      instrumentations.add(baseProperties(module));
+    }
 
     Map<String, Object> output = new TreeMap<>();
-    libraryInstrumentations.forEach(
-        (group, modules) -> {
-          List<Map<String, Object>> instrumentations = new ArrayList<>();
-          for (InstrumentationModule module : modules) {
-            instrumentations.add(baseProperties(module));
-          }
-          output.put(group, instrumentations);
-        });
-
-    Map<String, Object> newOutput = new TreeMap<>();
-    if (output.isEmpty()) {
-      return newOutput;
-    }
-    newOutput.put("libraries", output);
-    return newOutput;
+    output.put("libraries", instrumentations);
+    return output;
   }
 
-  private static Map<String, Object> generateBaseYaml(
-      List<InstrumentationModule> list, InstrumentationClassification classification) {
+  private static Map<String, Object> getCustomInstrumentations(List<InstrumentationModule> list) {
     List<InstrumentationModule> filtered =
         list.stream()
-            .filter(module -> module.getMetadata().getClassification().equals(classification))
+            .filter(
+                module ->
+                    module
+                        .getMetadata()
+                        .getClassification()
+                        .equals(InstrumentationClassification.CUSTOM))
             .sorted(InstrumentationNameComparator.BY_NAME_AND_VERSION)
             .toList();
 
@@ -120,7 +106,7 @@ public class YamlHelper {
     if (instrumentations.isEmpty()) {
       return newOutput;
     }
-    newOutput.put(classification.toString(), instrumentations);
+    newOutput.put(InstrumentationClassification.CUSTOM.toString(), instrumentations);
     return newOutput;
   }
 
@@ -142,6 +128,10 @@ public class YamlHelper {
       moduleMap.put("has_standalone_library", true);
     }
 
+    if (module.hasJavaAgent()) {
+      moduleMap.put("has_javaagent", true);
+    }
+
     if (module.getAgentTargetVersions() != null && !module.getAgentTargetVersions().isEmpty()) {
       moduleMap.put("javaagent_target_versions", new ArrayList<>(module.getAgentTargetVersions()));
     }
@@ -158,7 +148,7 @@ public class YamlHelper {
         Map<String, Object> telemetryEntry = new LinkedHashMap<>();
         telemetryEntry.put("when", group);
         List<EmittedMetrics.Metric> metrics =
-            new ArrayList<>(module.getMetrics().getOrDefault(group, Collections.emptyList()));
+            new ArrayList<>(module.getMetrics().getOrDefault(group, emptyList()));
         List<Map<String, Object>> metricsList = new ArrayList<>();
 
         // sort by name for determinism in the order
@@ -172,7 +162,7 @@ public class YamlHelper {
         }
 
         List<EmittedSpans.Span> spans =
-            new ArrayList<>(module.getSpans().getOrDefault(group, Collections.emptyList()));
+            new ArrayList<>(module.getSpans().getOrDefault(group, emptyList()));
         List<Map<String, Object>> spanList = new ArrayList<>();
 
         // sort by name for determinism in the order
@@ -211,7 +201,7 @@ public class YamlHelper {
         List<String> conventionNames =
             module.getMetadata().getSemanticConventions().stream()
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .collect(toList());
         moduleMap.put("semantic_conventions", conventionNames);
       }
       if (module.getMetadata().getLibraryLink() != null) {
@@ -222,9 +212,7 @@ public class YamlHelper {
       }
       if (!module.getMetadata().getFeatures().isEmpty()) {
         List<String> functionNames =
-            module.getMetadata().getFeatures().stream()
-                .map(Enum::name)
-                .collect(Collectors.toList());
+            module.getMetadata().getFeatures().stream().map(Enum::name).collect(toList());
         moduleMap.put("features", functionNames);
       }
     }
@@ -262,6 +250,9 @@ public class YamlHelper {
   private static Map<String, Object> configurationToMap(ConfigurationOption configuration) {
     Map<String, Object> conf = new LinkedHashMap<>();
     conf.put("name", configuration.name());
+    if (configuration.declarativeName() != null) {
+      conf.put("declarative_name", configuration.declarativeName());
+    }
     conf.put("description", configuration.description());
     conf.put("type", configuration.type().toString());
     if (configuration.type().equals(ConfigurationType.BOOLEAN)) {
@@ -270,6 +261,9 @@ public class YamlHelper {
       conf.put("default", Integer.parseInt(configuration.defaultValue()));
     } else {
       conf.put("default", configuration.defaultValue());
+    }
+    if (configuration.examples() != null && !configuration.examples().isEmpty()) {
+      conf.put("examples", configuration.examples());
     }
     return conf;
   }
@@ -292,7 +286,8 @@ public class YamlHelper {
     Map<String, Object> innerMetricMap = new LinkedHashMap<>();
     innerMetricMap.put("name", metric.getName());
     innerMetricMap.put("description", metric.getDescription());
-    innerMetricMap.put("type", metric.getType());
+    innerMetricMap.put("instrument", metric.getInstrumentType());
+    innerMetricMap.put("data_type", metric.getType());
     innerMetricMap.put("unit", metric.getUnit());
     innerMetricMap.put("attributes", getSortedAttributeMaps(metric.getAttributes()));
     return innerMetricMap;
